--- a/html/style.css
+++ b/html/style.css
@@ -54,10 +54,44 @@ section p {
   margin-bottom: 20px;
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
+.gallery-container {
+  position: relative;
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
 }
+.gallery {
+  width: 400%;
+  position: relative;
+  transition: left 0.6s ease;
+  left: 0;
+}
+.gallery img {
+  width: 25%;
+  float: left;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 24px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 
 .gallery img {
   width: 20%;
