--- a/html/style.css
+++ b/html/style.css
@@ -26,11 +26,11 @@ nav ul li a {
   display: block;
   padding: 10px 20px;
   text-decoration: none;
-  color:black;
+  color: #333;
 }
 
 nav ul li a:hover {
-  background-color: blacks;
+  background-color: #333;
   color: #fff;
 }
 
@@ -54,62 +54,11 @@ section p {
   margin-bottom: 20px;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-body {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgb(25,12,41);
-}
-.slider {
-  position: relative;
-  width: 60%;
-  overflow: hidden;
-}
-.images {
-  display: flex;
+.splide__slide img {
   width: 100%;
+  height: auto;
 }
-.images img {
-  height: 400px;
-  width: 100%;
-  transition: all 0.15s ease;
-}
-.images input {
-  display: none;
-}
-.dots {
-  display: flex;
-  justify-content: center;
-  margin: 5px;
-}
-.dots label {
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  border: solid #fff 3px;
-  cursor: pointer;
-  transition: all 0.15s ease;
-  margin: 5px;
-}
-.dots label:hover {background: #fff;}
-#img1:checked ~ .m1 {
-  margin-left: 0;
-}
-#img2:checked ~ .m2 {
-  margin-left: -100%;
-}
-#img3:checked ~ .m3 {
-  margin-left: -200%;
-}
-#img4:checked ~ .m4 {
-  margin-left: -300%;
-}
+
 
 footer {
   background-color: #333;
