--- a/html/style.css
+++ b/html/style.css
@@ -1,116 +1,114 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@mixin sp-layout {
+  @media screen and (max-width: 750px) {
+    @content;
+  }
 }
 
 body {
-  font-family: Arial, sans-serif;
-}
-
-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #f2f2f2;
-  
+  min-height: 100vh;
+   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  overflow: hidden;
 }
 
-nav ul {
-  display: flex;
-  list-style: none;
+@function random_range($min, $max) {
+  $rand: random();
+  $random_range: $min + floor($rand * (($max - $min) + 1));
+  @return $random_range;
 }
 
-nav ul li a {
-  display: block;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: #333;
-}
-
-nav ul li a:hover {
-  background-color: #333;
-  color: #fff;
-}
-
-main {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-section {
-  margin: 20px 0;
-}
-
-section h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-section p {
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.splide__slide img {
+.stars {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: auto;
+  height: 120%;
+  transform: rotate(-45deg);
 }
 
+.star {
+  $star-count: 50;
+  --star-color: var(--primary-color);
+  --star-tail-length: 6em;
+  --star-tail-height: 2px;
+  --star-width: calc(var(--star-tail-length) / 6);
+  --fall-duration: 9s;
+  --tail-fade-duration: var(--fall-duration);
 
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
+  position: absolute;
+  top: var(--top-offset);
+  left: 0;
+  width: var(--star-tail-length);
+  height: var(--star-tail-height);
+  color: var(--star-color);
+  background: linear-gradient(45deg, currentColor, transparent);
+  border-radius: 50%;
+  filter: drop-shadow(0 0 6px currentColor);
+  transform: translate3d(104em, 0, 0);
+  animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
+  
+  @include sp-layout {
+    // For mobile performance, tail-fade animation will be removed QAQ
+    animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
+  }
+
+  @for $i from 1 through $star-count {
+    &:nth-child(#{$i}) {
+      --star-tail-length: #{random_range(500em, 750em) / 100};
+      --top-offset: #{random_range(0vh, 10000vh) / 100};
+      --fall-duration: #{random_range(6000, 12000s) / 1000};
+      --fall-delay: #{random_range(0, 10000s) / 1000};
+    }
+  }
+
+  &::before, &::after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: calc(var(--star-width) / -2);
+    width: var(--star-width);
+    height: 100%;
+    background: linear-gradient(45deg, transparent, currentColor, transparent);
+    border-radius: inherit;
+    animation: blink 2s linear infinite;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
 }
 
-footer p {
-  font-size: 14px;
+@keyframes fall {
+  to {
+    transform: translate3d(-30em, 0, 0);
+  }
 }
 
-/* Responsive design */
-
-@media screen and (max-width: 768px) {
-
-  header {
-    flex-direction: column;
-    align-items: center;
+@keyframes tail-fade {
+  0%, 50% {
+    width: var(--star-tail-length);
+    opacity: 1;
   }
 
-  nav ul {
-    flex-direction: column;
-    margin-top: 10px;
-    display: none;
+  70%, 80% {
+    width: 0;
+    opacity: 0.4;
   }
 
-  nav.active ul {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+  100% {
+    width: 0;
+    opacity: 0;
   }
+}
 
-  nav.active ul li a {
-    margin-bottom: 10px;
+@keyframes blink {
+  50% {
+    opacity: 0.6;
   }
-
-  nav button {
-    background-color: #333;
-    color: #fff;
-    padding: 5px 10px;
-    border: none;
-    margin-top: 10px;
-  }
-
-  nav button:hover {
-    cursor: pointer;
-  }
-
-  .gallery img {
-    width: 40%;
-  }
-
+}
